--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -43,5 +43,9 @@
             </ui:NavigationView.MenuItems>
 
         </ui:NavigationView>
+
+        <ui:SnackbarPresenter x:Name="SnackbarPresenter" 
+                              Grid.RowSpan="2" 
+                              VerticalAlignment="Bottom" />
     </Grid>
 </ui:FluentWindow>
